...

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutRatingBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/basic_info"
                    android:visibility="visible"
                    android:layout_width="match_parent"
...

                    <Button
                        android:id="@+id/btn_add_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
...

                    <Button
                        android:id="@+id/btn_newDrink"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
...
                        tools:visibility="visible">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/bar_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
...
                        tools:visibility="visible">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bar_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                        app:layout_constraintEnd_toEndOf="@id/address_input_layout"
                        app:layout_constraintStart_toStartOf="@id/address_input_layout"
                        app:layout_constraintTop_toBottomOf="@id/content" />

                    <TextView
                        android:id="@+id/btn_next"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...
                        android:background="@drawable/background_send"
                        android:gravity="center"
                        android:text="Next"
                        android:fontFamily="@font/comfortaa"
                        android:textSize="18dp"
...

                        <ImageView
                            android:id="@+id/btn_add_chip"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="16dp"
                            app:layout_constraintBottom_toBottomOf="@id/conetent_input_layout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/conetent_input_layout"
...
                            tools:visibility="visible">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/conetent_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_view_bar"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
...

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_view_drink"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/btn_add_chip_pairing"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginHorizontal="16dp"
                        app:layout_constraintBottom_toBottomOf="@id/pairing_input_layout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/pairing_input_layout"
...
                        tools:visibility="visible">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pairing_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/button_publish"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
...
                        android:fontFamily="@font/comfortaa"
                        android:gravity="center"
                        android:text='@{viewModel.status != LoadApiStatus.LOADING ? "send" : ""}'
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:onClick="@{() -> viewModel.bindData()}"
                        app:layout_constraintEnd_toEndOf="@id/comment_input_layout"
                        app:layout_constraintStart_toStartOf="@id/comment_input_layout"
                        app:layout_constraintTop_toBottomOf="@id/comment_input_layout"
...
                        tools:visibility="visible">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/comment_input"
                            style="@style/DetailContent"
                            android:layout_width="match_parent"
...
