...
    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_nav_search_selector"
            android:title=""/>

    <item
            android:id="@+id/navigation_rate"
            android:icon="@drawable/ic_nav_rate_selector"
            android:title=""/>

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_nav_friends_selector"
...
